# onebound_sdk

./: .gitignore  LICENSE  README.md
onebound-go/: README.md  go.mod
onebound-go/onebound/: client.go  client_test.go
onebound-java/: pom.xml
onebound-java/src/main/java/cn/onebound/sdk/: OneBoundClient.java
onebound-java/src/main/java/cn/onebound/sdk/bidding_info/bbw/api/: BbwItemApi.java
onebound-java/src/main/java/cn/onebound/sdk/bidding_info/cgyzb/api/: CgyzbItemApi.java
onebound-java/src/main/java/cn/onebound/sdk/bidding_info/czw/api/: CzwItemApi.java
onebound-java/src/main/java/cn/onebound/sdk/bidding_info/hbw/api/: HbwItemApi.java
onebound-java/src/main/java/cn/onebound/sdk/bidding_info/jxsggzy/api/: JxsggzyItemApi.java
onebound-java/src/main/java/cn/onebound/sdk/bidding_info/zblh/api/: ZblhItemApi.java
onebound-java/src/main/java/cn/onebound/sdk/bidding_info/zxw/api/: ZxwItemApi.java
onebound-java/src/main/java/cn/onebound/sdk/core/api/: BaseApi.java
onebound-java/src/main/java/cn/onebound/sdk/core/config/: ClientConfig.java
onebound-java/src/main/java/cn/onebound/sdk/core/model/response/: BaseResponse.java
onebound-java/src/main/java/cn/onebound/sdk/domestic/ali1688/api/: Ali1688ItemApi.java  Ali1688OtherApi.java  Ali1688ReviewApi.java  Ali1688SearchApi.java  Ali1688SellerApi.java
onebound-python/: README.md  pyproject.toml
onebound-python/onebound/: __init__.py  client.py
onebound-python/onebound/domestic/: __init__.py
onebound-python/tests/: test_client.py  test_integration.py
(+138 files in other folders)
