[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onebound-sdk"
version = "1.0.0"
description = "Unofficial SDK for OneBound Taobao API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OneBound Team", email = "team@onebound.cn"}
]
keywords = ["onebound", "taobao", "api", "sdk", "ecommerce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/onebound/onebound-sdk"
Repository = "https://github.com/onebound/onebound-sdk"
Documentation = "https://github.com/onebound/onebound-sdk#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["onebound*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
